--- a/src/app/pages/page/modulo5/modulo5.component.html
+++ b/src/app/pages/page/modulo5/modulo5.component.html
@@ -1,8 +1,8 @@
 <div class="modulo5">
 
   <div class="inicio d-flex flex-column text-center justify-content-center align-items-center text-light">
-    <div class="container">
-      <div class="titulo">
+    <div class="titulo">
+      <div class="container">
         <h1 class="animate__animated animate__fadeInDown">Modulo 5</h1>
         <img class="animate__animated animate__zoomInDown animate__delay-2s" src="assets/img-modulo5/2.svg" alt="">
       </div>
@@ -11,8 +11,8 @@
 
   @defer (on viewport) {
   <div class="obj-gen animate__animated animate__bounceInLeft animate__slow">
-    <div class="container">
-      <div class="bg">
+    <div class="bg">
+      <div class="container">
         <!-- <img src="assets/img-modulo5/9.svg" alt=""> -->
         <div class="text d-flex flex-column justify-content-center align-items-center text-center">
           <h2>OBJETIVO GENERAL</h2>
@@ -33,8 +33,8 @@
 
   @defer (on viewport) {
   <div class="temario animate__animated animate__bounceInRight animate__slower">
-    <div class="container">
-      <div class="bg">
+    <div class="bg">
+      <div class="container">
 
         <div class="text text-start">
           <h3>TEMARIO</h3>
@@ -57,8 +57,8 @@
 
   @defer (on viewport) {
   <div class="introducction animate__animated animate__fadeInUpBig animate__slower">
-    <div class="container">
-      <div class="bg">
+    <div class="bg">
+      <div class="container">
         <div class="text">
           <h3>INTRODUCCIÓN</h3>
           <p>
@@ -82,9 +82,9 @@
   }
 
   <div class="que-es mb-5">
-    <div class="container">
 
-      <div class="bg-izquierda mb-5">
+    <div class="bg-izquierda mb-5">
+        <div class="container">
 
         @defer(on viewport){
         <div class="text animate__animated animate__fadeInTopRight animate__slow">
@@ -361,95 +361,109 @@
   </div>
 
   <div class="planificacion">
-    <div class="bg">
-      @defer(on viewport){
-      <div class="text">
-        <h3>PLANIFICACIÓN Y PRESUPUESTO INDIVIDUAL/FAMILIAR</h3>
-        <h3>¿Qué es un presupuesto?</h3>
-        <p>
-          Es una relación detallada y por escrito de los ingresos y gastos que se tienen
-          durante un período de tiempo determinado. Es recomendable elaborarlo antes
-          de que se produzcan estos ingresos y gastos, por ejemplo, el mes previo. El
-          presupuesto ayuda a controlar los gastos identificando aquellos que no son
-          necesarios y, por lo tanto, conocer la capacidad de ahorro y gasto.
-        </p>
-        <p>
-          Elaborar un presupuesto no es una tarea complicada ni sugiere imágenes o
-          situaciones desagradables, al contrario, es la forma más eficaz para administrar
-          y aprovechar eficazmente el dinero.
-        </p>
-        <p>
-          Realizar un presupuesto ayudará a:
-        </p>
+    @defer(on viewport){
+    <div class="row">
+      <h3>PLANIFICACIÓN Y PRESUPUESTO INDIVIDUAL/FAMILIAR</h3>
+      <div class="col-12 col-xl-6">
+        <div class="bg bg-1">
+          <div class="text">
+            <h3>¿Qué es un presupuesto?</h3>
+            <p>
+              Es una relación detallada y por escrito de los ingresos y gastos que se tienen
+              durante un período de tiempo determinado. Es recomendable elaborarlo antes
+              de que se produzcan estos ingresos y gastos, por ejemplo, el mes previo. El
+              presupuesto ayuda a controlar los gastos identificando aquellos que no son
+              necesarios y, por lo tanto, conocer la capacidad de ahorro y gasto.
+            </p>
+            <p>
+              Elaborar un presupuesto no es una tarea complicada ni sugiere imágenes o
+              situaciones desagradables, al contrario, es la forma más eficaz para administrar
+              y aprovechar eficazmente el dinero.
+            </p>
+            <p>
+              Realizar un presupuesto ayudará a:
+            </p>
 
-        <ul>
-          <li>
-            Saber en qué se gasta el dinero.
-          </li>
-          <li>
-            Priorizar gastos.
-          </li>
-          <li>
-            Reducir o eliminar deudas.
-          </li>
-          <li>
-            Destinar alguna cantidad para ahorro todos los meses.
-          </li>
-          <li>
-            Acumular un fondo para posibles emergencias o imprevistos.
-          </li>
-          <li>
-            Vivir con tranquilidad.
-          </li>
-          <li>
-            Hacer previsiones a futuro.
-          </li>
-          <li>
-            Llevar un seguimiento y control de ingresos y gastos.
-          </li>
-        </ul>
+            <ul>
+              <li>
+                Saber en qué se gasta el dinero.
+              </li>
+              <li>
+                Priorizar gastos.
+              </li>
+              <li>
+                Reducir o eliminar deudas.
+              </li>
+              <li>
+                Destinar alguna cantidad para ahorro todos los meses.
+              </li>
+              <li>
+                Acumular un fondo para posibles emergencias o imprevistos.
+              </li>
+              <li>
+                Vivir con tranquilidad.
+              </li>
+              <li>
+                Hacer previsiones a futuro.
+              </li>
+              <li>
+                Llevar un seguimiento y control de ingresos y gastos.
+              </li>
+            </ul>
 
-        <h3>¿Cómo elaborar un presupuesto?</h3>
 
-        <p>
-          La mejor manera de ordenar la situación financiera personal o familiar y
-          mantener un panorama claro, es mediante la elaboración de un presupuesto.
-        </p>
-        <p>
-          Para poder realizar un presupuesto de manera objetiva, se debe considerar
-          algunos puntos:
-        </p>
+          </div>
 
-        <ul>
-          <li>
-            Hacer conciencia sobre cuánto se gasta al mes, cotejando las cifras con la
-            realidad.
-          </li>
-          <li>
-            Clasificar, ordenar y guardar los documentos como facturas, notas, tickets,
-            entre otros.
-          </li>
-          <li>
-            Registrar y calendarizar los gastos.
-          </li>
-          <li>
-            Conviene controlar regularmente el presupuesto: revisar los gastos y si es
-            necesario, proceder a los ajustes oportunos, dada la flexibilidad del
-            presupuesto.
-          </li>
-          <li>
-            Identificar qué gastos se podrían reducir o posponer hasta un momento de
-            mayor solvencia económica.
-          </li>
-          <li>
-            Ahora, a la suma de tus ingresos, réstale los gastos, así obtendrás tu balance.
-          </li>
-        </ul>
-
+        </div>
       </div>
+      <div class="col-12 col-xl-6">
+        <div class="bg bg-2">
+          <div class="text">
+            <h3>¿Cómo elaborar un presupuesto?</h3>
 
-      }@placeholder {<div style="height: 670px;"></div>}
+            <p>
+              La mejor manera de ordenar la situación financiera personal o familiar y
+              mantener un panorama claro, es mediante la elaboración de un presupuesto.
+            </p>
+            <p>
+              Para poder realizar un presupuesto de manera objetiva, se debe considerar
+              algunos puntos:
+            </p>
+
+            <ul>
+              <li>
+                Hacer conciencia sobre cuánto se gasta al mes, cotejando las cifras con la
+                realidad.
+              </li>
+              <li>
+                Clasificar, ordenar y guardar los documentos como facturas, notas, tickets,
+                entre otros.
+              </li>
+              <li>
+                Registrar y calendarizar los gastos.
+              </li>
+              <li>
+                Conviene controlar regularmente el presupuesto: revisar los gastos y si es
+                necesario, proceder a los ajustes oportunos, dada la flexibilidad del
+                presupuesto.
+              </li>
+              <li>
+                Identificar qué gastos se podrían reducir o posponer hasta un momento de
+                mayor solvencia económica.
+              </li>
+              <li>
+                Ahora, a la suma de tus ingresos, réstale los gastos, así obtendrás tu balance.
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
     </div>
+
+
+
+    }@placeholder {<div style="height: 670px;"></div>}
   </div>
 
   <div class="pasos">
@@ -475,5 +489,10 @@
       }@placeholder {<div style="height: 670px;"></div>}
     </div>
   </div>
+
+
+</div>
+<div class="container my-5">
+  <app-retro-act5/>
 
 </div>
